--- a/_data/sources.yaml
+++ b/_data/sources.yaml
@@ -955,6 +955,21 @@
     - intervention science
     - "social decision-making"
 
+- id: whr2023
+  title: "Doing good and feeling good: Relationships between altruism and well-being for altruists, beneficiaries, and observers"
+  authors:
+  - Shawn A. Rhoads
+  - Abigail A. Marsh
+  publisher: World Happiness Report
+  date: '2023-03-20'
+  image: images/WHR.png
+  link: https://worldhappiness.report/ed/2023/doing-good-and-feeling-good-relationships-between-altruism-and-well-being-for-altruists-beneficiaries-and-observers/
+  tags:
+    - prosociality
+    - altruism
+    - "social decision-making"
+    - "subjective well-being"
+
 - id: doi:10.1007/978-3-031-17125-3_501-1
   title: Traits of extraordinary altruists
   authors:
@@ -1159,7 +1174,7 @@
     - neuroimaging
 
 - id: doi:10.1177/0956797621994767
-  title: Global Variation in Subjective Well-Being Predicts Seven Forms of Altruism
+  title: Global variation in subjective well-being predicts seven forms of altruism
   authors:
   - Shawn A. Rhoads
   - Devon Gunter
