--- a/_data/citations.yaml
+++ b/_data/citations.yaml
@@ -1565,8 +1565,7 @@
   tags:
   - emotion
   - affective experience
-- id: whr2023
-  title: 'Doing good and feeling good: Relationships between altruism and well-being
+- title: 'Doing good and feeling good: Relationships between altruism and well-being
     for altruists, beneficiaries, and observers'
   authors:
   - Shawn A. Rhoads
