--- a/_data/sources.yaml
+++ b/_data/sources.yaml
@@ -955,8 +955,7 @@
     - intervention science
     - "social decision-making"
 
-- id: whr2023
-  title: "Doing good and feeling good: Relationships between altruism and well-being for altruists, beneficiaries, and observers"
+- title: "Doing good and feeling good: Relationships between altruism and well-being for altruists, beneficiaries, and observers"
   authors:
   - Shawn A. Rhoads
   - Abigail A. Marsh
