--- a/_data/news.yaml
+++ b/_data/news.yaml
@@ -27,11 +27,153 @@
     - social neuroscience
 
 - title: "NIH to award over $207 million to support highly innovative biomedical and behavioral research projects"
-  link: "NIH to award over $207 million to support highly innovative biomedical and behavioral research projects"
-  publisher: National Institutes of Health
-  date: '2024-10-08'
+  link: "https://commonfund.nih.gov/highrisk/highlights/nih-award-over-207-million-support-highly-innovative-biomedical-and-behavioral"
+  publisher: "National Institutes of Health"
+  date: "2024-10-08"
   id: ""
   tags:
     - loneliness
     - computational psychiatry
     - social neuroscience
+
+- title: "Three Alumni Receive Glassman Distinguished Dissertation Award"
+  link: "https://grad.georgetown.edu/2024/05/21/neuroscientist-historian-social-cognitive-scientist-receive-2024-harold-glassman-distinguished-dissertation-award/"
+  publisher: "Georgetown University"
+  date: "2024-05-21"
+  id: ""
+  tags:
+    - interpersonal perception
+    - social learning
+    - altruism
+
+- title: "Do Moral Gains Necessarily Entail Moral Losses?"
+  link: "https://www.psychologytoday.com/us/blog/moral-boundaries/202405/do-moral-gains-necessarily-entail-moral-losses"
+  publisher: "Psychology Today"
+  date: "2024-05-31"
+  id: ""
+  tags:
+    - altruism
+    - social distance
+
+- title: "Do You Have What It Takes to Be a Hero?"
+  link: "https://www.psychologytoday.com/us/blog/trust-games/202311/do-you-have-what-it-takes-to-be-a-hero"
+  publisher: "Psychology Today"
+  date: "2023-12-08"
+  id: ""
+  tags:
+    - altruism
+    - social distance
+
+- title: "The Neuroscience Behind Superhuman Acts of Generosity"
+  link: "https://www.georgetown.edu/news/the-neuroscience-behind-superhuman-acts-of-generosity/"
+  publisher: "Georgetown University"
+  date: "2023-07-14"
+  id: ""
+  tags:
+    - altruism
+    - social distance
+
+- title: "Happiness Is a Movement"
+  link: "https://www.psychologytoday.com/intl/blog/where-women-govern/202306/2023-world-happiness-report-happiness-is-a-movement"
+  publisher: "Psychology Today"
+  date: "2023-04-30"
+  id: ""
+  tags:
+    - altruism
+    - "subjective well-being"
+
+- title: "These 3 Personality Traits Define Extreme Altruists — Do You Have Them?"
+  link: "https://www.inverse.com/health/altruism"
+  publisher: "Inverse"
+  date: "2023-04-30"
+  id: ""
+  tags:
+    - altruism
+    - social distance
+    - individual differences
+
+- title: "Heroes, They're Just Like Us (Almost)"
+  link: "https://www.medicalrepublic.com.au/heroes-theyre-just-like-us-almost/90168"
+  publisher: "The Medical Republic"
+  date: "2023-04-24"
+  id: ""
+  tags:
+    - altruism
+    - social distance
+    - individual differences
+
+- title: "Psychologists Map the Psyche of Extreme Altruists"
+  link: "https://www.eurekalert.org/news-releases/986706"
+  publisher: "EurekAlert"
+  date: "2023-04-19"
+  id: ""
+  tags:
+    - altruism
+    - social distance
+    - individual differences
+
+- title: "Georgetown Researchers Contribute to UN World Happiness Report"
+  link: "https://college.georgetown.edu/news-story/world-happiness-report-23"
+  publisher: "Georgetown University"
+  date: "2023-03-20"
+  id: ""
+  tags:
+    - altruism
+    - "subjective well-being"
+
+- title: "Ph.D. Students are Winners at 2022 Graduate Student Awards"
+  link: "https://psychology.georgetown.edu/news-story/ph-d-students-are-winners-at-2022-graduate-student-awards"
+  publisher: "Georgetown University"
+  date: "2022-04-21"
+  id: ""
+  tags: []
+
+- title: "Shawn Rhoads Successfully Defends Doctoral Dissertation"
+  link: "https://psychology.georgetown.edu/news-story/shawn-rhoads-successfully-defends-doctoral-dissertation"
+  publisher: "Georgetown University"
+  date: "2022-04-20"
+  id: ""
+  tags: []
+
+- title: "The 2021 APA Dissertation Research Award Recipients"
+  link: "https://www.apa.org/science/awards/2021-dissertation-research-award"
+  publisher: "American Psychological Association"
+  date: "2022-03-10"
+  id: ""
+  tags: []
+
+- title: "Individualism Makes Us Altruistic and Happy"
+  link: "https://www.bloomberg.com/opinion/articles/2021-06-27/cultures-that-are-more-individualistic-can-be-more-altruistic-and-happier-too"
+  publisher: "Bloomberg"
+  date: "2021-06-27"
+  id: ""
+  tags:
+    - altruism
+    - "subjective well-being"
+
+- title: "Everyone Thinks Americans Are Selfish. They're Wrong."
+  link: "https://www.nytimes.com/2021/05/26/opinion/individualism-united-states-altruism.html"
+  publisher: "New York Times"
+  date: "2021-05-26"
+  id: ""
+  tags:
+    - altruism
+    - "subjective well-being"
+
+- title: "Interview with Shawn Rhoads, Recipient of the Mistletoe Research Fellowship"
+  link: "https://grad.georgetown.edu/2020/12/03/interview-with-shawn-rhoads-recipient-of-the-mistletoe-research-fellowship/"
+  publisher: "Georgetown University"
+  date: "03-Dec-2020"
+  id: ""
+
+- title: "Ph.D. Student to Participate in the Lindau Nobel Laureate Meeting"
+  link: "https://college.georgetown.edu/news-story/psychology-ph-d-student-to-participate-in-the-2020-lindau-nobel-laureate-meeting/"
+  publisher: "Georgetown University"
+  date: "23-March-2020"
+  id: ""
+
+- title: "Four Graduate Students Win NSF Fellowships"
+  link: "https://college.georgetown.edu/news-story/psychology-graduate-students-win-nsf-fellowships/"
+  publisher: "Georgetown University"
+  date: "04-May-2018"
+  id: ""
