--- a/_data/citations.yaml
+++ b/_data/citations.yaml
@@ -12,6 +12,10 @@
   orcid: 0000-0003-1350-9458
   plugin: sources.py
   file: sources.yaml
+  buttons:
+  - type: article
+    text: article
+    link: https://doi.org/g82sfx
   tags:
   - computational psychiatry
   - computational modeling
@@ -27,6 +31,10 @@
   orcid: 0000-0003-1350-9458
   plugin: sources.py
   file: sources.yaml
+  buttons:
+  - type: article
+    text: article
+    link: https://doi.org/g82sfz
   tags:
   - social inference
   - social decision-making
@@ -937,7 +945,7 @@
   - Jay J. Van Bavel
   publisher: Science Advances
   date: '2024-02-09'
-  link: null
+  link: https://doi.org/10.1126/sciadv.adj5778
   orcid: 0000-0003-1350-9458
   plugin: sources.py
   file: sources.yaml
@@ -1590,7 +1598,7 @@
   publisher: World Happiness Report
   date: '2023-03-20'
   image: null
-  link: null
+  link: https://worldhappiness.report/ed/2023/doing-good-and-feeling-good-relationships-between-altruism-and-well-being-for-altruists-beneficiaries-and-observers/
   buttons:
   - type: article
     text: article
