--- a/_data/sources.yaml
+++ b/_data/sources.yaml
@@ -313,7 +313,6 @@
   file: orcid.yaml
   tags:
     - prosociality
-    - climate action
     - intervention science
     - open science
 
@@ -975,7 +974,6 @@
   file: orcid.yaml
   tags:
     - prosociality
-    - climate action
     - intervention science
     - "social decision-making"
 
@@ -1198,7 +1196,6 @@
     - prosociality
     - altruism
     - cooperation
-    - equity
     - neuroimaging
 
 - id: doi:10.1177/0956797621994767
@@ -1635,3 +1632,25 @@
   tags:
     - emotion
     - affective experience
+
+- id: doi:10.31234/osf.io/gx7au_v1
+  title: When predicting climate-relevant intervention effectiveness, academics outperform the public, but not a simple heuristic
+  authors:
+  - Kimberly C Doell
+  - Lukas Lengersdorff
+  - Shawn A. Rhoads
+  - Boryana Todorova
+  - Jonas P. Nitschke
+  - James Druckman
+  - Madalina Vlasceanu
+  - Claus Lamm
+  - Jay J. Van Bavel
+  publisher: PsyArXiv
+  date: '2025-05-15'
+  link: https://doi.org/g9kjxs
+  orcid: 0000-0003-1350-9458
+  plugin: orcid.py
+  file: orcid.yaml
+  tags:
+    - intervention science
+    - open science
