--- a/_data/types.yaml
+++ b/_data/types.yaml
@@ -14,6 +14,10 @@ phd:
   icon: fa-solid fa-graduation-cap
   description: PhD Student
 
+laboratory-manager:
+  icon: fa-solid fa-user-graduate
+  description: Laboratory Manager
+
 undergrad:
   icon: fa-solid fa-user-graduate
   description: Undergraduate Student
