--- a/.github/workflows/on-schedule.yaml
+++ b/.github/workflows/on-schedule.yaml
@@ -19,4 +19,4 @@ jobs:
     if: github.repository != 'greenelab/lab-website-template'
     uses: ./.github/workflows/update-citations.yaml
     with:
-      open-pr: true
+      open-pr: false
