--- a/_data/citations.yaml
+++ b/_data/citations.yaml
@@ -1044,6 +1044,13 @@
   orcid: 0000-0003-1350-9458
   plugin: sources.py
   file: sources.yaml
+  buttons:
+  - type: article
+    text: article
+    link: https://doi.org/10.1093/pnasnexus/pgad199
+  - type: website
+    text: altmetric
+    link: https://nature.altmetric.com/details/doi/10.1093/pnasnexus/pgad199
   tags:
   - altruism
   - prosociality
