--- a/_data/projects.yaml
+++ b/_data/projects.yaml
@@ -20,7 +20,7 @@
   image: 
   tags:
     - UNDERSTANDING OTHERS
-    - IDIOSYNCRATIC BRAINS SHARED WORLD
+    - UNIQUE BRAINS SHARED WORLD
     - social inference
     - social interaction
     - synchrony
@@ -32,7 +32,7 @@
   link: 
   description: " "
   tags:
-    - IDIOSYNCRATIC BRAINS SHARED WORLD
+    - UNIQUE BRAINS SHARED WORLD
     - social inference
     - synchrony
     - functional neuroimaging
