--- a/_data/sources.yaml
+++ b/_data/sources.yaml
@@ -1127,7 +1127,7 @@
   - Jo Cutler
   - Patricia Lockwood
   - Abigail Marsh
-  publisher: PsyArXiv
+  publisher: In press at Nature Communications
   date: '2023-02-24'
   link: https://doi.org/g82sgb
   orcid: 0000-0003-1350-9458
